package controller;

import model.*;
import view.*;

public class ChessMain {
    public static void main(String[] args) {
        Party party = new Party();
    }
}
