package model.piece;

public class Factory {
}
