package view;

public interface ChessboardView {
}
